[tool.poetry]
name = "035-gsheet"
version = "0.1.0"
description = ""
authors = ["nsamardzic13 <nikola.samardzic1997@gmail.com>"]
readme = "README.md"
packages = [{include = "035_gsheet"}]

[tool.poetry.dependencies]
python = ">= 3.9, <= 3.11"
asttokens = "2.2.1"
attrs = "23.1.0"
backcall = "0.2.0"
beautifulsoup4 = "4.12.2"
bleach = "6.0.0"
build = "0.10.0"
cachecontrol = "0.13.1"
cachetools = "5.3.1"
certifi = "2023.7.22"
charset-normalizer = "3.2.0"
cleo = "2.0.1"
colorama = "0.4.6"
comm = "0.1.4"
crashtest = "0.4.1"
debugpy = "1.6.7.post1"
decorator = "5.1.1"
defusedxml = "0.7.1"
distlib = "0.3.7"
dulwich = "0.21.5"
executing = "1.2.0"
fastjsonschema = "2.18.0"
filelock = "3.12.3"
google-auth = "2.22.0"
google-auth-oauthlib = "1.0.0"
gspread = "5.10.0"
idna = "3.4"
importlib-metadata = "6.8.0"
installer = "0.7.0"
ipykernel = "6.25.1"
ipython = "8.14.0"
jaraco-classes = "3.3.0"
jedi = "0.19.0"
jinja2 = "3.1.2"
jupyter-client = "8.3.0"
jupyter-core = "5.3.1"
jupyterlab-pygments = "0.2.2"
kaleido = "0.2.1"
keyring = "24.2.0"
markupsafe = "2.1.3"
matplotlib-inline = "0.1.6"
mistune = "3.0.1"
more-itertools = "10.1.0"
msgpack = "1.0.5"
nbclient = "0.8.0"
nbconvert = "7.7.4"
nbformat = "5.9.2"
nest-asyncio = "1.5.7"
numpy = "1.25.2"
oauthlib = "3.2.2"
packaging = "23.1"
pandas = "2.0.3"
pandocfilters = "1.5.0"
parso = "0.8.3"
pexpect = "4.8.0"
pickleshare = "0.7.5"
pkginfo = "1.9.6"
platformdirs = "3.10.0"
plotly = "5.16.1"
poetry-core = "1.7.0"
poetry-plugin-export = "1.5.0"
prompt-toolkit = "3.0.39"
psutil = "5.9.5"
ptyprocess = "0.7.0"
pure-eval = "0.2.2"
pyasn1 = "0.5.0"
pyasn1-modules = "0.3.0"
pygments = "2.16.1"
pyproject-hooks = "1.0.0"
pyrsistent = "0.19.3"
python-dateutil = "2.8.2"
pytz = "2023.3"
pywin32 = "306"
pywin32-ctypes = "0.2.2"
pyzmq = "25.1.1"
rapidfuzz = "2.15.1"
referencing = "0.30.2"
requests = "2.31.0"
requests-oauthlib = "1.3.1"
requests-toolbelt = "1.0.0"
rpds-py = "0.9.2"
rsa = "4.9"
shellingham = "1.5.3"
six = "1.16.0"
soupsieve = "2.4.1"
stack-data = "0.6.2"
tenacity = "8.2.3"
tinycss2 = "1.2.1"
tomlkit = "0.12.1"
tornado = "6.3.3"
traitlets = "5.9.0"
trove-classifiers = "2023.8.7"
tzdata = "2023.3"
urllib3 = "1.26.16"
virtualenv = "20.24.3"
wcwidth = "0.2.6"
webencodings = "0.5.1"
zipp = "3.16.2"
boto3 = "^1.28.57"
botocore = "^1.31.57"
scipy = "^1.11.3"
matplotlib = "^3.8.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
