[tool.poetry]
name = "035-gsheet"
version = "0.1.0"
description = ""
authors = ["nsamardzic13 <nikola.samardzic1997@gmail.com>"]
readme = "README.md"
packages = [{include = "035_gsheet"}]

[tool.poetry.dependencies]
python = ">=3.9, <3.12"
boto3 = "^1.34.59"
gspread = "^6.0.2"
numpy = "^1.26.4"
plotly = "^5.19.0"
pandas = "^2.2.1"
redmail = "^0.6.0"
matplotlib = "^3.8.3"
kaleido = "0.2.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
